Fixed floating copywrite bar on about page and added spacing in the nav links.

--- a/Emmaus/wwwroot/css/style.css
+++ b/Emmaus/wwwroot/css/style.css
@@ -8,8 +8,6 @@ body {
     background-size: cover;
     margin: 0 auto;
     background-color: #DDDDDD;
-    /*background-image: url("../images/blueSky50%.jpg");*/
-
     background-attachment: fixed
 }
 
@@ -33,9 +31,10 @@ body {
 }
 
     .wrapper .navBarContainer {
-        position: sticky;
+        position: absolute;
         top: 0px;
-        height: 80px;
+        width: 100%;
+        /*height: 80px;*/
         background-color: whitesmoke;
         grid-row: 1;
         grid-column: 1 / span 3;
@@ -65,6 +64,7 @@ body {
             font-weight: 200;
             text-transform: uppercase;
             color: black;
+            padding-left: 10px;
         }
 
     .wrapper > .navBarContainer .navLink:hover {
@@ -133,7 +133,7 @@ body {
             grid-row: 2;
             grid-column: 2;
             display: grid;
-            grid-template-rows: 180px auto;
+            grid-template-rows: auto;
             grid-template-columns: 1fr 3fr;
             padding-bottom: 20px;
         }
@@ -141,13 +141,14 @@ body {
             .wrapper .mainWrapper .about .image {
                 grid-row: 1;
                 grid-column: 1;
-                text-align: left;
+                /*text-align: center;*/
             }
 
             .wrapper .mainWrapper .about .content {
+                padding-left: 10px;
                 grid-row: 1;
                 grid-column: 2;
-                text-align: left;
+                /*text-align: center;*/
             }
 
         .wrapper .mainWrapper .services {
